# smc-milter

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autospf.c  autospf.h  configure.ac  smc-milter.c  smc-milter.conf  smc-milter.h  smc-milter.hosts  smc-milter.init-deb  smc-milter.init-gentoo  smc-milter.init-rh  smc-milter.sh  smc-milter.users  spf.c  spf.h  utils.c  utils.h  virus.c  virus.h
